// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar with "titles" prop expected first panel to be selected (have "selected" prop) 1`] = `
.c0 {
  width: 300px;
  display: block;
  height: 100vh;
  border-right: 1px solid #e9ecef;
}

.c1 {
  width: 100%;
  height: 70px;
  border-bottom: 1px solid #e9ecef;
  text-align: center;
  line-height: 70px;
  cursor: pointer;
  color: #5a6169;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 60px;
  border-left: 5px solid #007bff;
  border-bottom: 1px solid #e9ecef;
  padding-left: 30px;
  line-height: 60px;
  cursor: pointer;
  background-color: #FBFBFB;
  color: #007bff;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c2:hover {
  background-color: #e9ecef;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 60px;
  border-left: 5px solid transparent;
  border-bottom: 1px solid #e9ecef;
  padding-left: 30px;
  line-height: 60px;
  cursor: pointer;
  background-color: #ffffff;
  color: #5a6169;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c4:hover {
  background-color: #e9ecef;
}

.c3 {
  margin-right: 10px;
}

<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "activeColors": Object {
          "danger": "#97122e",
          "dark": "#0a0c0d",
          "info": "#008da5",
          "java": "#15ad80",
          "lightGrey": "#FBFBFB",
          "primary": "#0062cc",
          "royalBlue": "#3f20e7",
          "salmon": "#ff0e41",
          "secondary": "#42484e",
          "success": "#129857",
          "warning": "#cc9000",
          "white": "#007bff",
        },
        "border": "#e1e5eb",
        "danger": "#c4183c",
        "dark": "#212529",
        "darkGrey": "#becad6",
        "hoverColors": Object {
          "danger": "#ad1535",
          "dark": "#16181b",
          "info": "#00a2bf",
          "java": "#17c491",
          "lightGrey": "#e9ecef",
          "primary": "#006fe6",
          "royalBlue": "#5337ea",
          "salmon": "#ff2855",
          "secondary": "#4e545b",
          "success": "#14af64",
          "warning": "#e6a200",
          "white": "#ffffff",
        },
        "info": "#00b8d8",
        "java": "#1adba2",
        "lightGrey": "#e9ecef",
        "primary": "#007bff",
        "royalBlue": "#674eec",
        "salmon": "#ff4169",
        "secondary": "#5a6169",
        "success": "#17c671",
        "text": "#5a6169",
        "warning": "#ffb400",
        "white": "#ffffff",
      },
      "shadows": Object {
        "focus": Object {
          "danger": "0 0 0 3px rgba(196,24,60,.15),0 3px 15px rgba(196,24,60,.2),0 2px 5px rgba(0,0,0,.1)",
          "dark": "0 0 0 3px rgba(33,37,41,.15),0 3px 15px rgba(33,37,41,.2),0 2px 5px rgba(0,0,0,.1)",
          "info": "0 0 0 3px rgba(0,184,216,.15),0 3px 15px rgba(0,184,216,.2),0 2px 5px rgba(0,0,0,.1)",
          "java": "0 0 0 3px rgba(26,219,162,.15),0 3px 15px rgba(26,219,162,.2),0 2px 5px rgba(0,0,0,.1)",
          "primary": "0 0 0 3px rgba(0,123,255,.15),0 3px 15px rgba(0,123,255,.2),0 2px 5px rgba(0,0,0,.1)",
          "royalBlue": "0 0 0 3px rgba(103,78,236,.15),0 3px 15px rgba(103,78,236,.2),0 2px 5px rgba(0,0,0,.1)",
          "salmon": "0 0 0 3px rgba(255,65,105,.15),0 3px 15px rgba(255,65,105,.2),0 2px 5px rgba(0,0,0,.1)",
          "secondary": "0 0 0 3px rgba(90,97,105,.15),0 3px 15px rgba(90,97,105,.2),0 2px 5px rgba(0,0,0,.1)",
          "success": "0 0 0 3px rgba(23,198,113,.15),0 3px 15px rgba(23,198,113,.2),0 2px 5px rgba(0,0,0,.1)",
          "switch": "0 3px 8px 1px rgba(0,0,0,.2)",
          "warning": "0 0 0 3px rgba(255,180,0,.15),0 3px 15px rgba(255,180,0,.2),0 2px 5px rgba(0,0,0,.1)",
          "white": "0 0 0 3px rgba(251,251,251,.15),0 3px 15px rgba(251,251,251,.2),0 2px 5px rgba(0,0,0,.1)",
        },
        "hover": Object {
          "danger": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(196,24,60,.25)",
          "dark": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(33,37,41,.25)",
          "info": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,184,216,.25)",
          "inset": "inset 0 3px 5px rgba(0,0,0,.125)!important",
          "java": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(26,219,162,.25)",
          "primary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,123,255,.25)",
          "royalBlue": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(103,78,236,.25)",
          "salmon": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,65,105,.25)",
          "secondary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(90,97,105,.25)",
          "success": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(23,198,113,.25)",
          "warning": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,180,0,.25)",
          "white": "0 0.125rem 0.625rem rgba(129,142,163,.2), 0 0.0625rem 0.125rem rgba(129,142,164,.3)",
        },
      },
    }
  }
>
  <Sidebar
    onClick={[Function]}
    preventDefault={true}
    stopPropagation={true}
    titles={
      Array [
        Object {
          "icon": "edit",
          "title": "Blog Dashboard",
        },
        Object {
          "icon": "vertical_split",
          "title": "Blog Posts",
        },
        Object {
          "icon": "note_add",
          "title": "Add New Post",
        },
      ]
    }
  >
    <styled.div
      className="wrapper"
    >
      <StyledComponent
        className="wrapper"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  width: 300px;
  display: block;
  height: 100vh;
  border-right: 1px solid ",
                [Function],
                ";
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="wrapper c0"
        >
          <styled.div>
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bwzfXH",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "
  width: 100%;
  height: 70px;
  border-bottom: 1px solid ",
                      [Function],
                      ";
  text-align: center;
  line-height: 70px;
  cursor: pointer;
  color: ",
                      [Function],
                      ";
",
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bwzfXH",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <div
                className="c1"
              >
                Dashboards
              </div>
            </StyledComponent>
          </styled.div>
          <styled.div
            key="BlogDashboard"
            onClick={[Function]}
            selected={true}
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    Object {
                      "data-test": "panel",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-htpNat",
                    "isStatic": false,
                    "lastClassName": "c4",
                    "rules": Array [
                      "
  display: flex;
  align-items: center;
  width: 100%;
  height: 60px;
  border-left: ",
                      [Function],
                      ";
  border-bottom: 1px solid ",
                      [Function],
                      ";
  padding-left: 30px;
  line-height: 60px;
  cursor: pointer;
  background-color: ",
                      [Function],
                      ";
  color: ",
                      [Function],
                      ";
  transition: all .3s;
  
  &:hover {
    background-color: ",
                      [Function],
                      ";
  }
",
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-htpNat",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              onClick={[Function]}
              selected={true}
            >
              <div
                className="c2"
                data-test="panel"
                onClick={[Function]}
                selected={true}
              >
                <styled.i
                  className="material-icons"
                >
                  <StyledComponent
                    className="material-icons"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bxivhb",
                          "isStatic": true,
                          "lastClassName": "c3",
                          "rules": Array [
                            "
  margin-right: 10px;
",
                          ],
                        },
                        "displayName": "styled.i",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bxivhb",
                        "target": "i",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <i
                      className="material-icons c3"
                    >
                      edit
                    </i>
                  </StyledComponent>
                </styled.i>
                <span>
                  Blog Dashboard
                </span>
              </div>
            </StyledComponent>
          </styled.div>
          <styled.div
            key="BlogPosts"
            onClick={[Function]}
            selected={false}
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    Object {
                      "data-test": "panel",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-htpNat",
                    "isStatic": false,
                    "lastClassName": "c4",
                    "rules": Array [
                      "
  display: flex;
  align-items: center;
  width: 100%;
  height: 60px;
  border-left: ",
                      [Function],
                      ";
  border-bottom: 1px solid ",
                      [Function],
                      ";
  padding-left: 30px;
  line-height: 60px;
  cursor: pointer;
  background-color: ",
                      [Function],
                      ";
  color: ",
                      [Function],
                      ";
  transition: all .3s;
  
  &:hover {
    background-color: ",
                      [Function],
                      ";
  }
",
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-htpNat",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              onClick={[Function]}
              selected={false}
            >
              <div
                className="c4"
                data-test="panel"
                onClick={[Function]}
                selected={false}
              >
                <styled.i
                  className="material-icons"
                >
                  <StyledComponent
                    className="material-icons"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bxivhb",
                          "isStatic": true,
                          "lastClassName": "c3",
                          "rules": Array [
                            "
  margin-right: 10px;
",
                          ],
                        },
                        "displayName": "styled.i",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bxivhb",
                        "target": "i",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <i
                      className="material-icons c3"
                    >
                      vertical_split
                    </i>
                  </StyledComponent>
                </styled.i>
                <span>
                  Blog Posts
                </span>
              </div>
            </StyledComponent>
          </styled.div>
          <styled.div
            key="AddNewPost"
            onClick={[Function]}
            selected={false}
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    Object {
                      "data-test": "panel",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-htpNat",
                    "isStatic": false,
                    "lastClassName": "c4",
                    "rules": Array [
                      "
  display: flex;
  align-items: center;
  width: 100%;
  height: 60px;
  border-left: ",
                      [Function],
                      ";
  border-bottom: 1px solid ",
                      [Function],
                      ";
  padding-left: 30px;
  line-height: 60px;
  cursor: pointer;
  background-color: ",
                      [Function],
                      ";
  color: ",
                      [Function],
                      ";
  transition: all .3s;
  
  &:hover {
    background-color: ",
                      [Function],
                      ";
  }
",
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-htpNat",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              onClick={[Function]}
              selected={false}
            >
              <div
                className="c4"
                data-test="panel"
                onClick={[Function]}
                selected={false}
              >
                <styled.i
                  className="material-icons"
                >
                  <StyledComponent
                    className="material-icons"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bxivhb",
                          "isStatic": true,
                          "lastClassName": "c3",
                          "rules": Array [
                            "
  margin-right: 10px;
",
                          ],
                        },
                        "displayName": "styled.i",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bxivhb",
                        "target": "i",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <i
                      className="material-icons c3"
                    >
                      note_add
                    </i>
                  </StyledComponent>
                </styled.i>
                <span>
                  Add New Post
                </span>
              </div>
            </StyledComponent>
          </styled.div>
        </div>
      </StyledComponent>
    </styled.div>
  </Sidebar>
</ThemeProvider>
`;

exports[`Sidebar with "titles" prop expected to render those panels 1`] = `
.c0 {
  width: 300px;
  display: block;
  height: 100vh;
  border-right: 1px solid #e9ecef;
}

.c1 {
  width: 100%;
  height: 70px;
  border-bottom: 1px solid #e9ecef;
  text-align: center;
  line-height: 70px;
  cursor: pointer;
  color: #5a6169;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 60px;
  border-left: 5px solid #007bff;
  border-bottom: 1px solid #e9ecef;
  padding-left: 30px;
  line-height: 60px;
  cursor: pointer;
  background-color: #FBFBFB;
  color: #007bff;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c2:hover {
  background-color: #e9ecef;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 60px;
  border-left: 5px solid transparent;
  border-bottom: 1px solid #e9ecef;
  padding-left: 30px;
  line-height: 60px;
  cursor: pointer;
  background-color: #ffffff;
  color: #5a6169;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c4:hover {
  background-color: #e9ecef;
}

.c3 {
  margin-right: 10px;
}

<div
  class="wrapper c0"
>
  <div
    class="c1"
  >
    Dashboards
  </div>
  <div
    class="c2"
    data-test="panel"
    selected=""
  >
    <i
      class="material-icons c3"
    >
      edit
    </i>
    <span>
      Blog Dashboard
    </span>
  </div>
  <div
    class="c4"
    data-test="panel"
  >
    <i
      class="material-icons c3"
    >
      vertical_split
    </i>
    <span>
      Blog Posts
    </span>
  </div>
  <div
    class="c4"
    data-test="panel"
  >
    <i
      class="material-icons c3"
    >
      note_add
    </i>
    <span>
      Add New Post
    </span>
  </div>
</div>
`;

exports[`Sidebar with "titles" prop onClick prop 1`] = `
.c0 {
  width: 300px;
  display: block;
  height: 100vh;
  border-right: 1px solid #e9ecef;
}

.c1 {
  width: 100%;
  height: 70px;
  border-bottom: 1px solid #e9ecef;
  text-align: center;
  line-height: 70px;
  cursor: pointer;
  color: #5a6169;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 60px;
  border-left: 5px solid #007bff;
  border-bottom: 1px solid #e9ecef;
  padding-left: 30px;
  line-height: 60px;
  cursor: pointer;
  background-color: #FBFBFB;
  color: #007bff;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c2:hover {
  background-color: #e9ecef;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 60px;
  border-left: 5px solid transparent;
  border-bottom: 1px solid #e9ecef;
  padding-left: 30px;
  line-height: 60px;
  cursor: pointer;
  background-color: #ffffff;
  color: #5a6169;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c4:hover {
  background-color: #e9ecef;
}

.c3 {
  margin-right: 10px;
}

<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "activeColors": Object {
          "danger": "#97122e",
          "dark": "#0a0c0d",
          "info": "#008da5",
          "java": "#15ad80",
          "lightGrey": "#FBFBFB",
          "primary": "#0062cc",
          "royalBlue": "#3f20e7",
          "salmon": "#ff0e41",
          "secondary": "#42484e",
          "success": "#129857",
          "warning": "#cc9000",
          "white": "#007bff",
        },
        "border": "#e1e5eb",
        "danger": "#c4183c",
        "dark": "#212529",
        "darkGrey": "#becad6",
        "hoverColors": Object {
          "danger": "#ad1535",
          "dark": "#16181b",
          "info": "#00a2bf",
          "java": "#17c491",
          "lightGrey": "#e9ecef",
          "primary": "#006fe6",
          "royalBlue": "#5337ea",
          "salmon": "#ff2855",
          "secondary": "#4e545b",
          "success": "#14af64",
          "warning": "#e6a200",
          "white": "#ffffff",
        },
        "info": "#00b8d8",
        "java": "#1adba2",
        "lightGrey": "#e9ecef",
        "primary": "#007bff",
        "royalBlue": "#674eec",
        "salmon": "#ff4169",
        "secondary": "#5a6169",
        "success": "#17c671",
        "text": "#5a6169",
        "warning": "#ffb400",
        "white": "#ffffff",
      },
      "shadows": Object {
        "focus": Object {
          "danger": "0 0 0 3px rgba(196,24,60,.15),0 3px 15px rgba(196,24,60,.2),0 2px 5px rgba(0,0,0,.1)",
          "dark": "0 0 0 3px rgba(33,37,41,.15),0 3px 15px rgba(33,37,41,.2),0 2px 5px rgba(0,0,0,.1)",
          "info": "0 0 0 3px rgba(0,184,216,.15),0 3px 15px rgba(0,184,216,.2),0 2px 5px rgba(0,0,0,.1)",
          "java": "0 0 0 3px rgba(26,219,162,.15),0 3px 15px rgba(26,219,162,.2),0 2px 5px rgba(0,0,0,.1)",
          "primary": "0 0 0 3px rgba(0,123,255,.15),0 3px 15px rgba(0,123,255,.2),0 2px 5px rgba(0,0,0,.1)",
          "royalBlue": "0 0 0 3px rgba(103,78,236,.15),0 3px 15px rgba(103,78,236,.2),0 2px 5px rgba(0,0,0,.1)",
          "salmon": "0 0 0 3px rgba(255,65,105,.15),0 3px 15px rgba(255,65,105,.2),0 2px 5px rgba(0,0,0,.1)",
          "secondary": "0 0 0 3px rgba(90,97,105,.15),0 3px 15px rgba(90,97,105,.2),0 2px 5px rgba(0,0,0,.1)",
          "success": "0 0 0 3px rgba(23,198,113,.15),0 3px 15px rgba(23,198,113,.2),0 2px 5px rgba(0,0,0,.1)",
          "switch": "0 3px 8px 1px rgba(0,0,0,.2)",
          "warning": "0 0 0 3px rgba(255,180,0,.15),0 3px 15px rgba(255,180,0,.2),0 2px 5px rgba(0,0,0,.1)",
          "white": "0 0 0 3px rgba(251,251,251,.15),0 3px 15px rgba(251,251,251,.2),0 2px 5px rgba(0,0,0,.1)",
        },
        "hover": Object {
          "danger": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(196,24,60,.25)",
          "dark": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(33,37,41,.25)",
          "info": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,184,216,.25)",
          "inset": "inset 0 3px 5px rgba(0,0,0,.125)!important",
          "java": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(26,219,162,.25)",
          "primary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(0,123,255,.25)",
          "royalBlue": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(103,78,236,.25)",
          "salmon": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,65,105,.25)",
          "secondary": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(90,97,105,.25)",
          "success": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(23,198,113,.25)",
          "warning": "0 5px 15px rgba(0,0,0,.05), 0 4px 10px rgba(255,180,0,.25)",
          "white": "0 0.125rem 0.625rem rgba(129,142,163,.2), 0 0.0625rem 0.125rem rgba(129,142,164,.3)",
        },
      },
    }
  }
>
  <Sidebar
    onClick={[MockFunction]}
    preventDefault={true}
    stopPropagation={true}
    titles={
      Array [
        Object {
          "icon": "edit",
          "title": "Blog Dashboard",
        },
        Object {
          "icon": "vertical_split",
          "title": "Blog Posts",
        },
        Object {
          "icon": "note_add",
          "title": "Add New Post",
        },
      ]
    }
  >
    <styled.div
      className="wrapper"
    >
      <StyledComponent
        className="wrapper"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c0",
              "rules": Array [
                "
  width: 300px;
  display: block;
  height: 100vh;
  border-right: 1px solid ",
                [Function],
                ";
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="wrapper c0"
        >
          <styled.div>
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bwzfXH",
                    "isStatic": false,
                    "lastClassName": "c1",
                    "rules": Array [
                      "
  width: 100%;
  height: 70px;
  border-bottom: 1px solid ",
                      [Function],
                      ";
  text-align: center;
  line-height: 70px;
  cursor: pointer;
  color: ",
                      [Function],
                      ";
",
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bwzfXH",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <div
                className="c1"
              >
                Dashboards
              </div>
            </StyledComponent>
          </styled.div>
          <styled.div
            key="BlogDashboard"
            onClick={[Function]}
            selected={true}
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    Object {
                      "data-test": "panel",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-htpNat",
                    "isStatic": false,
                    "lastClassName": "c4",
                    "rules": Array [
                      "
  display: flex;
  align-items: center;
  width: 100%;
  height: 60px;
  border-left: ",
                      [Function],
                      ";
  border-bottom: 1px solid ",
                      [Function],
                      ";
  padding-left: 30px;
  line-height: 60px;
  cursor: pointer;
  background-color: ",
                      [Function],
                      ";
  color: ",
                      [Function],
                      ";
  transition: all .3s;
  
  &:hover {
    background-color: ",
                      [Function],
                      ";
  }
",
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-htpNat",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              onClick={[Function]}
              selected={true}
            >
              <div
                className="c2"
                data-test="panel"
                onClick={[Function]}
                selected={true}
              >
                <styled.i
                  className="material-icons"
                >
                  <StyledComponent
                    className="material-icons"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bxivhb",
                          "isStatic": true,
                          "lastClassName": "c3",
                          "rules": Array [
                            "
  margin-right: 10px;
",
                          ],
                        },
                        "displayName": "styled.i",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bxivhb",
                        "target": "i",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <i
                      className="material-icons c3"
                    >
                      edit
                    </i>
                  </StyledComponent>
                </styled.i>
                <span>
                  Blog Dashboard
                </span>
              </div>
            </StyledComponent>
          </styled.div>
          <styled.div
            key="BlogPosts"
            onClick={[Function]}
            selected={false}
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    Object {
                      "data-test": "panel",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-htpNat",
                    "isStatic": false,
                    "lastClassName": "c4",
                    "rules": Array [
                      "
  display: flex;
  align-items: center;
  width: 100%;
  height: 60px;
  border-left: ",
                      [Function],
                      ";
  border-bottom: 1px solid ",
                      [Function],
                      ";
  padding-left: 30px;
  line-height: 60px;
  cursor: pointer;
  background-color: ",
                      [Function],
                      ";
  color: ",
                      [Function],
                      ";
  transition: all .3s;
  
  &:hover {
    background-color: ",
                      [Function],
                      ";
  }
",
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-htpNat",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              onClick={[Function]}
              selected={false}
            >
              <div
                className="c4"
                data-test="panel"
                onClick={[Function]}
                selected={false}
              >
                <styled.i
                  className="material-icons"
                >
                  <StyledComponent
                    className="material-icons"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bxivhb",
                          "isStatic": true,
                          "lastClassName": "c3",
                          "rules": Array [
                            "
  margin-right: 10px;
",
                          ],
                        },
                        "displayName": "styled.i",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bxivhb",
                        "target": "i",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <i
                      className="material-icons c3"
                    >
                      vertical_split
                    </i>
                  </StyledComponent>
                </styled.i>
                <span>
                  Blog Posts
                </span>
              </div>
            </StyledComponent>
          </styled.div>
          <styled.div
            key="AddNewPost"
            onClick={[Function]}
            selected={false}
          >
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    Object {
                      "data-test": "panel",
                    },
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-htpNat",
                    "isStatic": false,
                    "lastClassName": "c4",
                    "rules": Array [
                      "
  display: flex;
  align-items: center;
  width: 100%;
  height: 60px;
  border-left: ",
                      [Function],
                      ";
  border-bottom: 1px solid ",
                      [Function],
                      ";
  padding-left: 30px;
  line-height: 60px;
  cursor: pointer;
  background-color: ",
                      [Function],
                      ";
  color: ",
                      [Function],
                      ";
  transition: all .3s;
  
  &:hover {
    background-color: ",
                      [Function],
                      ";
  }
",
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-htpNat",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              onClick={[Function]}
              selected={false}
            >
              <div
                className="c4"
                data-test="panel"
                onClick={[Function]}
                selected={false}
              >
                <styled.i
                  className="material-icons"
                >
                  <StyledComponent
                    className="material-icons"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-bxivhb",
                          "isStatic": true,
                          "lastClassName": "c3",
                          "rules": Array [
                            "
  margin-right: 10px;
",
                          ],
                        },
                        "displayName": "styled.i",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "sc-bxivhb",
                        "target": "i",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <i
                      className="material-icons c3"
                    >
                      note_add
                    </i>
                  </StyledComponent>
                </styled.i>
                <span>
                  Add New Post
                </span>
              </div>
            </StyledComponent>
          </styled.div>
        </div>
      </StyledComponent>
    </styled.div>
  </Sidebar>
</ThemeProvider>
`;

exports[`Sidebar without props expected not to render any panels 1`] = `
.c0 {
  width: 300px;
  display: block;
  height: 100vh;
  border-right: 1px solid #e9ecef;
}

.c1 {
  width: 100%;
  height: 70px;
  border-bottom: 1px solid #e9ecef;
  text-align: center;
  line-height: 70px;
  cursor: pointer;
  color: #5a6169;
}

<div
  class="wrapper c0"
>
  <div
    class="c1"
  >
    Dashboards
  </div>
</div>
`;
